# telegram-goal-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  aa_replies.py  aa_util.py  aa_watchlist.py  alternative_angles.py  azure-pipelines.yml  cl.sh  competition.py  entrypoint.sh  existing_comments.py  live_comments.py  main.py  pipeline.sh  reddit.py  replies.py  requirements.txt  scrape.py  setup.py  teleg.py  telegram_wrapper.py  test.py
.github/workflows/: rust.yml
alternative_angles/: alternative_angles.py  goal_registration_handler.py  reddit_comment_listener.py  reddit_comment_traversal.py  register_comment_listener_for_goal.py  watch_list.py
bash_scripts/: README.md  buli.sh  formula1.sh  internationals.sh  prem.sh  reply.sh
competitions/: buli.json  cl.json  formula1.json  internationals.json  prem.json
logs/: README.md
src/: main.rs
src/config/: bundesliga.json  bundesliga_2.json  champions_league.json  config.rs  internationals.json  premier_league.json
src/download_video/: download_video.rs  mod.rs
src/filter/: competition.rs  filter.rs  get_competitions_of_submission.rs  mod.rs  videohost.rs
src/reddit/: get_fresh_subreddit.rs  listen_for_comments.rs  listen_for_submissions.rs  log_roux_err.rs  mod.rs  refresh_client.rs  search_for_alternative_angles_in_submission_comments.rs
src/reddit_scrape/: mod.rs  scrape_reddit_submission.rs  submission.rs
src/replay/: replay.rs
src/scrape/: get_html_with_browser.rs  get_html_without_browser.rs  mod.rs  scrape.rs  scrape_html.rs  scrape_with_browser.rs  scrape_without_browser.rs  test_dubz_01.html  test_streamin_01.html
src/telegram/: mod.rs  send.rs  send_link.rs
