[package]
name = "telegram-goal-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
html-escape = "0.2.13"
jsonpath-rust = "0.3.0"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["blocking"]}
roux = "1.4.0"
roux-stream = "0.1.0"
scraper = "0.16.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-retry = "0.3.0"
url = "2.3.1"

