[package]
name = "telegram-goal-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", rev = "3222d08d292972b6677846cf2bbfc2a008864832"}
html-escape = "0.2.13"
jsonpath-rust = "0.3.0"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["blocking"]}
scraper = "0.16.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"
regex = "1.9.5"
rand = "0.8.5"

